# Nomy

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  dev.sh  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml
backend/: main.py
backend/api/: websocket.py
backend/api/routes/: devices.py  rooms.py  system.py
backend/core/: config.py  event_bus.py  plugin_loader.py  state.py
backend/devices/: base.py
backend/devices/display/: pjlink.py
config/: nomy.yaml
config/rooms/: example-room.yaml
docs/: adding-devices.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: DeviceCard.tsx  RoomView.tsx  StatusBar.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/services/: api.ts
frontend/src/styles/: globals.css
frontend/src/types/: index.ts
simulators/: pjlink_sim.py
